@@ -48,7 +48,6 @@ import com.example.woowa.restaurant.restaurant.dto.request.RestaurantCreateReque
 import com.example.woowa.restaurant.restaurant.dto.response.RestaurantCreateResponse;
 import com.example.woowa.restaurant.restaurant.dto.response.RestaurantFindResponse;
 import com.example.woowa.restaurant.restaurant.service.RestaurantService;
-
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Collections;
@@ -136,13 +135,12 @@ public class BDDTest {
     @DisplayName("관리자를 생성한다.")
     @Order(0)
     void _0() {
-        AdminCreateRequest adminCreateRequest = new AdminCreateRequest("dev12", "Programmers12!");
-        adminService.createAdmin(adminCreateRequest);
-
         roleRepository.save(new Role(UserRole.ROLE_OWNER.getRoleName()));
         roleRepository.save(new Role(UserRole.ROLE_ADMIN.getRoleName()));
         roleRepository.save(new Role(UserRole.ROLE_RIDER.getRoleName()));
         roleRepository.save(new Role(UserRole.ROLE_CUSTOMER.getRoleName()));
+        AdminCreateRequest adminCreateRequest = new AdminCreateRequest("dev12", "Programmers12!");
+        adminService.createAdmin(adminCreateRequest);
     }
 
     @Test
@@ -161,7 +159,7 @@ public class BDDTest {
     @Order(2)
     void _2() {
         OwnerCreateRequest ownerCreateRequest = new OwnerCreateRequest("tTest@12341234",
-                "tT@1234567890", "사장님", "010-1234-1234");
+            "tT@1234567890", "사장님", "010-1234-1234");
         ownerService.createOwner(ownerCreateRequest);
     }
 
@@ -171,12 +169,12 @@ public class BDDTest {
     void _3() {
         List<OwnerFindResponse> owners = ownerService.findOwners();
         List<Long> categoryIds = categoryService.findCategories().stream()
-                .map(CategoryFindResponse::getId).collect(Collectors.toList());
-        RestaurantCreateRequest restaurantCreateRequest = new RestaurantCreateRequest("한식",
-                "760-15-00993", LocalTime.now(), LocalTime.now().plusHours(5), true, "010-1111-1234",
-                "테스트용 가게", "서울특별시 동작구 상도동", categoryIds);
+            .map(CategoryFindResponse::getId).collect(Collectors.toList());
+        RestaurantCreateRequest restaurantCreateRequest = new RestaurantCreateRequest("test 가게",
+            "760-15-00993", LocalTime.now(), LocalTime.now().plusHours(5), true, "010-1111-1234",
+            "테스트용 가게", "서울특별시 동작구 상도동", categoryIds);
         restaurant = restaurantService.createRestaurantByOwnerId(
-                owners.get(0).getId(), restaurantCreateRequest);
+            owners.getFirst().getId(), restaurantCreateRequest);
     }
 
     @Test
@@ -184,18 +182,18 @@ public class BDDTest {
     @Order(4)
     void _4() {
         List<RestaurantFindResponse> restauransNotPermitted = restaurantService.findRestaurantsIsPermittedIsFalse();
-        Long newRestaurant = restauransNotPermitted.get(0).getId();
-        adminService.authorizeRestaurant(newRestaurant);
+        Long newRestaurant = restauransNotPermitted.getFirst().getId();
+        adminService.permitRestaurant(newRestaurant);
     }
 
     @Test
     @DisplayName("어드민이 광고 상품을 등록한다")
     @Order(5)
     void _5() {
-        AdvertisementCreateRequest ultraCall = new AdvertisementCreateRequest("울트라콜",
-                UnitType.MOTHLY.getType(), RateType.FLAT.getType(), 88000, "울트라콜 광고", 10);
+        AdvertisementCreateRequest ultraCall = new AdvertisementCreateRequest("울트라콜1",
+            UnitType.MONTHLY.getType(), RateType.FLAT.getType(), 88000, "울트라콜 광고", 10);
         AdvertisementCreateRequest openList = new AdvertisementCreateRequest("오픈리스트",
-                UnitType.PER_ORDER.getType(), RateType.PERCENT.getType(), 10, "오픈리스트 광고", 10);
+            UnitType.PER_ORDER.getType(), RateType.PERCENT.getType(), 10, "오픈리스트 광고", 10);
         advertisementService.createAdvertisement(ultraCall);
         advertisementService.createAdvertisement(openList);
     }
@@ -213,9 +211,9 @@ public class BDDTest {
     @Order(7)
     void _7() {
         CustomerGradeCreateRequest customerGradeCreateRequest = new CustomerGradeCreateRequest(5,
-                "일반", 3000, 2);
+            "일반", 3000, 2);
         customerGradeService.createCustomerGrade(
-                customerGradeCreateRequest);
+            customerGradeCreateRequest);
     }
 
 
@@ -224,18 +222,18 @@ public class BDDTest {
     @Order(8)
     void _8() {
         CustomerAddressCreateRequest customerAddressCreateRequest = new CustomerAddressCreateRequest(
-                "서울특별시 동작구 상도동", "빌라 101호", "집");
-        CustomerCreateRequest customerCreateRequest = new CustomerCreateRequest("dev12",
-                "Programmers123!", "2000-01-01", customerAddressCreateRequest);
+            "서울특별시 동작구 상도동", "빌라 101호", "집");
+        CustomerCreateRequest customerCreateRequest = new CustomerCreateRequest("cus12",
+            "Programmers123!", "2000-01-01", customerAddressCreateRequest);
         customer = customerService.createCustomer(
-                customerCreateRequest);
+            customerCreateRequest);
     }
 
     @Test
     @DisplayName("고객은 고객 등급에 따라 정기 쿠폰을 얻을 수 있다.")
     @Order(9)
     void _9() {
-        voucherService.registerMonthlyVoucher("dev12");
+        voucherService.registerMonthlyVoucher("cus12");
     }
 
     @Test
@@ -251,8 +249,9 @@ public class BDDTest {
     @DisplayName("사장은 가게에 메뉴를 추가할 수 있다.")
     @Order(11)
     void _11() {
+        System.out.println("menuGroupId : " + menuGroupId);
         MenuSaveRequest request = new MenuSaveRequest(menuGroupId, "참치 김밥", "맛있는 참치 김밥입니다.",
-                4500);
+            4500);
         menuId = menuService.addMenu(request);
     }
 
@@ -275,11 +274,11 @@ public class BDDTest {
     @Order(14)
     void _14() {
         List<VoucherFindResponse> vouchers = voucherService.findUserVoucher(
-                customer.getLoginId());
+            customer.getLoginId());
         CartSaveRequest cartSaveRequest = new CartSaveRequest(menuId, 3);
         OrderSaveRequest orderSaveRequest = new OrderSaveRequest(customer.getLoginId(),
-                restaurant.getId(), vouchers.get(0).getId(), 0,
-                PaymentType.CREDIT_CARD, "서울특별시 동작구 상도동", Collections.singletonList(cartSaveRequest)
+            restaurant.getId(), vouchers.getFirst().getId(), 0,
+            PaymentType.CREDIT_CARD, "서울특별시 동작구 상도동", Collections.singletonList(cartSaveRequest)
         );
 
         orderId = orderService.addOrder(orderSaveRequest);
@@ -299,8 +298,8 @@ public class BDDTest {
     void _16() {
 
         RiderCreateRequest riderCreateRequest = new RiderCreateRequest("testId1234", "passwordA1!",
-                "name",
-                "010-1234-5678");
+            "name",
+            "010-1234-5678");
         riderId = riderService.save(riderCreateRequest);
     }
 
@@ -317,7 +316,7 @@ public class BDDTest {
     void _18() {
         PageRequest pageRequest = PageRequest.of(0, 20);
         Page<DeliveryResponse> deliveryResponsePage = deliveryService.findWaitingDelivery(
-                pageRequest);
+            pageRequest);
         deliveryId = deliveryResponsePage.stream().findFirst().get().getId();
     }
 
@@ -336,7 +335,7 @@ public class BDDTest {
         DeliveryResponse deliveryResponse = deliveryService.findResponseById(deliveryId);
 
         assertThat(deliveryResponse.getDeliveryStatus()).isEqualTo(
-                DeliveryStatus.DELIVERY_REGISTRATION);
+            DeliveryStatus.DELIVERY_REGISTRATION);
     }
 
     @Test
@@ -354,7 +353,7 @@ public class BDDTest {
         DeliveryResponse deliveryResponse = deliveryService.findResponseById(deliveryId);
 
         assertThat(deliveryResponse.getDeliveryStatus()).isEqualTo(
-                DeliveryStatus.DELIVERY_PICKUP);
+            DeliveryStatus.DELIVERY_PICKUP);
     }
 
     @Test
@@ -372,7 +371,7 @@ public class BDDTest {
     @Order(24)
     void _24() {
         OrderListCustomerRequest request = new OrderListCustomerRequest(customer.getLoginId(), 0, 1,
-                LocalDate.now(), LocalDate.now().plusMonths(1));
+            LocalDate.now(), LocalDate.now().plusMonths(1));
         orderService.findOrderByCustomer(request);
     }
 
@@ -381,7 +380,7 @@ public class BDDTest {
     @Order(25)
     void _25() {
         orderService.findDetailOrderForCustomer(
-                orderId);
+            orderId);
     }
 
     @Test
@@ -389,8 +388,8 @@ public class BDDTest {
     @Order(26)
     void _26() {
         OrderListRestaurantRequest request = new OrderListRestaurantRequest(restaurant.getId(), 0,
-                1,
-                LocalDate.now(), LocalDate.now().plusMonths(1));
+            1,
+            LocalDate.now(), LocalDate.now().plusMonths(1));
         orderService.findOrderByRestaurant(request);
     }
 
@@ -406,7 +405,7 @@ public class BDDTest {
     @Order(28)
     void _28() {
         OrderStatisticsRequest request = new OrderStatisticsRequest(restaurant.getId(),
-                LocalDate.now(), LocalDate.now().plusMonths(1));
+            LocalDate.now(), LocalDate.now().plusMonths(1));
         orderService.findOrderStatistics(request);
     }
 
@@ -415,14 +414,14 @@ public class BDDTest {
     @Order(29)
     void _29() {
         ReviewCreateRequest reviewCreateRequest = new ReviewCreateRequest("정말정말 맛있습니다.", 5);
-        reviewService.createReview("dev12", orderId,
-                reviewCreateRequest);
+        reviewService.createReview("cus12", orderId,
+            reviewCreateRequest);
     }
 
     @Test
     @DisplayName("고객은 가게 리뷰를 조회할 수 있다.")
     @Order(30)
     void _30() {
-        List<ReviewFindResponse> result = reviewService.findUserReview("dev12");
+        List<ReviewFindResponse> result = reviewService.findUserReview("cus12");
     }
 }
